test/fail/struct_field_undefined_type.zn
# ERRORS: 1
# Struct field with undefined type
struct Foo {
    var bar: NonExistent
}
func main() { 0 }
